start coding for the day

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         </div>
         <div class="form-group">
           <label for="toppings">Choose Your Toppings ($1 per topping)</label>
+          <input id="toppings" type="checkbox"
+
+          </select>
         </div>
       </form>
     </div>
