add checkboxes, button and results to HTML

--- a/index.html
+++ b/index.html
@@ -28,12 +28,23 @@
           </select>
         </div>
         <div class="form-group">
-          <label for="toppings">Choose Your Toppings ($1 per topping)</label>
-          <input id="toppings" type="checkbox"
-
-          </select>
+          <label>Choose Your Toppings ($1 per topping)</label>
+          <label><input id="toppings" type="checkbox" value="">Sausage</label>
+          <label><input id="toppings" type="checkbox" value="">Pepperoni</label>
+          <label><input id="toppings" type="checkbox" value="">Vegan Sausage</label>
+          <label><input id="toppings" type="checkbox" value="">Vegan Cheese</label>
+          <label><input id="toppings" type="checkbox" value="">Olives</label>
+          <label><input id="toppings" type="checkbox" value="">Bell Peppers</label>
+          <label><input id="toppings" type="checkbox" value="">Onion</label>
+          <label><input id="toppings" type="checkbox" value="">Mushrooms</label>
         </div>
+
+        <button type="submit" class="btn">Submit</button>
       </form>
+    </div>
+
+    <div id="show-price">
+      <h2><span id="name"></span>, your order will cost<span id="total"></span>.</h2>
     </div>
   </body>
 </html>
