--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="form-group">
           <label for="size">Choose A Size</label>
-          <select name="size" id="size">
+          <select class="size">
             <option value="small">Small ($15)</option>
             <option value="medium">Medium ($20)</option>
             <option value="large">Large ($25)</option>
