fix a few typos

--- a/index.html
+++ b/index.html
@@ -43,10 +43,8 @@
       </form>
 
       <div id="show-price">
-        <h2><span id="name"></span>, your order will cost <span id="total"></span>.</h2>
+        <h2>Thank you, <span id="name"></span>! Your order will cost <span id="total"></span></h2>
       </div>
     </div>
-
-    
   </body>
 </html>
